--- a/Kansio3/index.html
+++ b/Kansio3/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/styles.css"
+    <link rel="stylesheet" href="styles/styles.css">
     <title>kansio3 harjoitus</title>
 </head>
 
